-style: prevent text overflow for titles -feat: tooltips field for values with placeholders

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1508,6 +1508,7 @@ File Overview Styles
 							&-title {
 								color: $carbon-gray;
 								width: 120px;
+								word-break: break-word;
 							}
 							&-value {
 								flex: 1;
